--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>March Madness 2017</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="/bower_components/materialize/dist/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <title>March Madness 2017</title>
+  </head>
+  <h2>Brackets</h2>
+  <body ng-app="tourneyBracketApp">
 
-</body>
+    <script src="/bower_components/materialize/dist/fonts/roboto"></script>
+    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/materialize/dist/js/materialize.min.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
