--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
     <title>March Madness 2017</title>
   </head>
+
   <h2>Brackets</h2>
   <body ng-app="tourneyBracketApp">
 
+  <!-- Navigation -->
+  <div class="navbar-fixed" ng-controller="NavCtrl"></div>
+    <nav class="navigation">
+      <div class="nav-wrapper"></div>
+        <a href="#!" class="brand-logo">Madness</a>
+
+
+
+    </nav>
+
+    <script src="/bower_components/firebase/firebase.js"></script>
     <script src="/bower_components/materialize/dist/fonts/roboto"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
