--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/bower_components/materialize/dist/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>March Madness 2017</title>
   </head>
 
-  <h2>Brackets</h2>
+  <h2><a href="#/partials/brackets.html">Brackets</h2>
   <body ng-app="tourneyBracketApp">
 
   <!-- Navigation -->
@@ -25,7 +26,7 @@
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/materialize/dist/js/materialize.min.js"></script>
-    <script src="/bower_components/materialize/dist/fonts/roboto"></script>
+    <!-- <script src="/bower_components/materialize/dist/fonts/roboto"></script> -->
     <script src="main.js"></script>
   </body>
 </html>
