--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2><a href="#/partials/brackets.html">Brackets</h2>
   <body ng-app="tourneyBracketApp">
 
-  <!-- Navigation -->
+<!-- Navigation -->
   <div class="navbar-fixed" ng-controller="NavCtrl"></div>
     <nav class="navigation">
       <div class="nav-wrapper"></div>
@@ -20,12 +20,14 @@
 
 
     </nav>
-
+<!-- Dependencies -->
     <script src="/bower_components/firebase/firebase.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
+<!-- Materialize -->
     <script src="/bower_components/materialize/dist/js/materialize.min.js"></script>
+    <script src="/services/materializeInit.js"></script>
     <!-- <script src="/bower_components/materialize/dist/fonts/roboto"></script> -->
     <script src="main.js"></script>
   </body>
